--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head></head>
   <body>
     <h1>Our Story</h1>
-    Once upon a time....
+    Once upon a time there was a little kitty on a hill
   </body>
 </html>
