--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
     <h1>Our Story</h1>
     Once upon a time there was a little kitty on a hill
+    She was having an existential crisis.
   </body>
 </html>
