--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
   <body>
     <h1>Our Story</h1>
     Once upon a time there was a little kitty on a hill
+    She was having an existential crisis.
+    "What does it all mean?", she asked.
   </body>
 </html>
