--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body>
     <h1>Our Story</h1>
     Once upon a time there was a little kitty on a hill
-    She was having an existential crisis.
+    She was having an existential crisis. As a big dog started to bark.
   </body>
 </html>
