--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <body>
     <h1>Our Story</h1>
     Once upon a time there was a little kitty on a hill
-<<<<<<< Updated upstream
+
     She was having an existential crisis.
-=======
+
     The kitty was gluten free and was having trouble finding some bread
->>>>>>> Stashed changes
+
+    Thankfully the kitty's friend MAX the dog showed up and decided to help in the search, he said they should
   </body>
 </html>
