--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     The kitty was gluten free and was having trouble finding some bread
     Where do you get gluten free bread?
     Andreas hates cats
+    but he  knows where to goodfree bread
 
 
 
